# EasyMemoryAllocatorKit

./: .gitignore  CMakeLists.txt  README.md
01SimpleAllocator/: CMakeLists.txt
01SimpleAllocator/Include/SimpleAllocator/: SimpleAllocator.h
01SimpleAllocator/Src/: SimpleAllocator.cpp
EasyMemoryAllocatorEdu/: CMakeLists.txt  README.md
EasyMemoryAllocatorEdu/example/: ExampleArenaAllocator.cpp  ExampleBuddyAllocator.cpp  ExampleFrameAllocator.cpp  ExampleFreeListAllocator.cpp  ExampleLinearAllocator.cpp  ExamplePoolAllocator.cpp  ExampleRingBufferAllocator.cpp  ExampleSlabAllocator.cpp  ExampleStackAllocator.cpp  ExampleTLSFAllocator.cpp  ExampleThreadCachingAllocator.cpp
EasyMemoryAllocatorEdu/include/EAllocKit/: ArenaAllocator.hpp  BuddyAllocator.hpp  FrameAllocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  RingBufferAllocator.hpp  SlabAllocator.hpp  StackAllocator.hpp  TLSFAllocator.hpp  ThreadCachingAllocator.hpp
EasyMemoryAllocatorEdu/include/EAllocKit/Util/: Util.hpp
EasyMemoryAllocatorEdu/test/: Helper.h  TestArenaAllocator.cpp  TestBuddyAllocator.cpp  TestFrameAllocator.cpp  TestFreeListAllocator.cpp  TestLinearAllocator.cpp  TestPoolAllocator.cpp  TestSlabAllocator.cpp  TestTLSFAllocator.cpp
Include/Allocator/: Allocator.hpp  FreeListAllocator.h  FreeListAllocator.hpp  Helper.h  LinearAllocator.h  LinearAllocator.hpp  PoolAllocator.hpp  StackAllocator.h  StackAllocator.hpp
Include/Allocator/Util/: LinkNodeHeader.hpp  Util.hpp
Src/: FreeListAllocator.cpp  Helper.cpp  LinearAllocator.cpp  StackAllocator.cpp  Util.hpp
Test/: Helper.h  TestArenaAllocator.cpp  TestBuddyAllocator.cpp  TestFrameAllocator.cpp  TestFreeListAllocator.cpp  TestLinearAllocator.cpp  TestPoolAllocator.cpp  TestRingBufferAllocator.cpp  TestSTLAllocatorAdapter.cpp  TestSlabAllocator.cpp  TestStackAllocator.cpp  TestThreadCachingAllocator.cpp  TestUtil.cpp
include/EAllocKit/: ArenaAllocator.hpp  BuddyAllocator.hpp  FrameAllocator.hpp  FreeListAllocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp  RingBufferAllocator.hpp  SlabAllocator.hpp  StackAllocator.hpp  TLSFAllocator.hpp  ThreadCachingAllocator.hpp
include/EAllocKit/Util/: LinkNodeHeader.hpp  STLAllocatorAdapter.hpp  Util.hpp
test/: TestMemoryAllocatorUtil.cpp  TestTLSFAllocator.cpp
