# Library
add_library                 (eallockit INTERFACE)
target_include_directories  (eallockit INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

function(create_eallockit_test test_name source_file)
    add_executable          (eallockit_edu_test_${test_name} ${source_file})
    target_link_libraries   (eallockit_edu_test_${test_name} PUBLIC eallockit)
    add_test                (NAME eallockit_edu_test_${test_name} COMMAND eallockit_edu_test_${test_name})
endfunction()

if (ENABLE_EALLOCKIT_TEST)
    create_eallockit_test (linear_allocator      ${CMAKE_CURRENT_SOURCE_DIR}/test/TestLinearAllocator.cpp)
    create_eallockit_test (free_list_allocator   ${CMAKE_CURRENT_SOURCE_DIR}/test/TestFreeListAllocator.cpp)
    create_eallockit_test (pool_allocator        ${CMAKE_CURRENT_SOURCE_DIR}/test/TestPoolAllocator.cpp)
    create_eallockit_test (stack_allocator       ${CMAKE_CURRENT_SOURCE_DIR}/test/TestStackAllocator.cpp)
    create_eallockit_test (tlsf_allocator        ${CMAKE_CURRENT_SOURCE_DIR}/test/TestTLSFAllocator.cpp)
    create_eallockit_test (buddy_allocator       ${CMAKE_CURRENT_SOURCE_DIR}/test/TestBuddyAllocator.cpp)
    create_eallockit_test (slab_allocator        ${CMAKE_CURRENT_SOURCE_DIR}/test/TestSlabAllocator.cpp)
    create_eallockit_test (ring_buffer_allocator ${CMAKE_CURRENT_SOURCE_DIR}/test/TestRingBufferAllocator.cpp)
    create_eallockit_test (thread_caching_allocator ${CMAKE_CURRENT_SOURCE_DIR}/test/TestThreadCachingAllocator.cpp)
    create_eallockit_test (frame_allocator       ${CMAKE_CURRENT_SOURCE_DIR}/test/TestFrameAllocator.cpp)
    create_eallockit_test (arena_allocator              ${CMAKE_CURRENT_SOURCE_DIR}/test/TestArenaAllocator.cpp)
endif ()

function(create_eallockit_example example_name source_file)
    add_executable          (eallockit_edu_example_${example_name} ${source_file})
    target_link_libraries   (eallockit_edu_example_${example_name} PUBLIC eallockit)
endfunction()

if (ENABLE_EALLOCKIT_EXAMPLE)
    create_eallockit_example (linear_allocator      ${CMAKE_CURRENT_SOURCE_DIR}/example/ExampleLinearAllocator.cpp)
    create_eallockit_example (free_list_allocator   ${CMAKE_CURRENT_SOURCE_DIR}/example/ExampleFreeListAllocator.cpp)
    create_eallockit_example (frame_allocator       ${CMAKE_CURRENT_SOURCE_DIR}/example/ExampleFrameAllocator.cpp)
endif()